# chatgpt_commit

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-app.yml  version-bump.yml  version-tag.yml
chatgpt_commit/: __main__.py
